@@ -1,6 +1,8 @@
 Revision history for Finance::Google::Portfolio
 
 {{$NEXT}}
+        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
+        - Update copyright year
         - Update Travis YAML
 
 1.04      2018-02-05 10:56:44-08:00 America/Los_Angeles
